updated required files.

--- a/cf-sf-apex-cache-builder/action.yml
+++ b/cf-sf-apex-cache-builder/action.yml
@@ -1,6 +1,6 @@
 name: "cf-sf-apex-cache-builder"
 description: "Creates an Apex Test Dependency Cache for optimized testing"
-author: "Cloudfulcrum"
+author: "CloudFulcrum"
 
 inputs:
   sf_url:
