--- a/cf-sf-secure-quality-gate/action.yml
+++ b/cf-sf-secure-quality-gate/action.yml
@@ -1,26 +1,20 @@
 name: "cf-sf-secure-quality-gate"
 description: "Runs a security scan and fails if there are security issues in the delta changes"
-author: "Cloudfulcrum"
+author: "CloudFulcrum"
 
 inputs:
-  sf_url:
-    description: "Salesforce instance URL"
+  sf_metadatapath:
+    description: "To scan security issues"
     required: true
-  sf_username:
-    description: "Salesforce username"
-    required: true
-  sf_password:
-    description: "Salesforce password"
-    required: true
-  sf_testlevel:
-    description: "Test level for deployment"
-    required: false
-    default: ""
-  sf_nocheckonly:
-    description: "Check-only deployment"
-    required: false
-    default: "false"
 
+  sf_scareportpath:
+    description: "To store scan results"
+    required: true
+
+  sf_reporttype:
+    description: "To store scan results in the specified type"
+    required: true
+    default:
 branding:
   icon: "upload-cloud"
   color: "blue"
