--- a/cf-sf-deploy-dynamic-apex/action.yml
+++ b/cf-sf-deploy-dynamic-apex/action.yml
@@ -1,6 +1,6 @@
 name: "cf-sf-deploy-dynamic-apex"
 description: "Deploys metadata and runs Apex tests with the “Dynamic Apex” parameter"
-author: "Cloudfulcrum"
+author: "CloudFulcrum"
 
 inputs:
   sf_metadatapath:
