--- a/.github/workflows/publish-docker-images.yml
+++ b/.github/workflows/publish-docker-images.yml
@@ -33,6 +33,6 @@ jobs:
           IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/${{ matrix.action }}:${{ env.IMAGE_TAG }}
           LATEST_IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/${{ matrix.action }}:latest
 
-          docker build -t $IMAGE_NAME -t $LATEST_IMAGE_NAME ${{ matrix.action }}
+          docker build -t $IMAGE_NAME -t $LATEST_IMAGE_NAME ${{ matrix.action }} --build-arg JAR_PATH=../sfdxlean.jar
           docker push $IMAGE_NAME
           docker push $LATEST_IMAGE_NAME
