--- a/.github/workflows/publish-docker-images.yml
+++ b/.github/workflows/publish-docker-images.yml
@@ -1,16 +1,17 @@
 name: Publish Docker Images
+
 on:
   push:
     branches:
-      - main  # Only run when code is pushed to main
+      - main  # Run only on pushes to main
     paths:
-      - "cf-sf-*/**"  # Trigger only if action folders change
+      - "cf-sf-*/**"  # Trigger only if specific action folders change
 
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
     permissions:
-      packages: write  # Allow pushing to GitHub Container Registry
+      packages: write  # Required for publishing to GitHub Packages
       contents: read
 
     strategy:
@@ -22,17 +23,15 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Log in to GitHub Container Registry
-        run: echo "${{ secrets.TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Set Image Tag
-        id: tag
-        run: echo "IMAGE_TAG=$(date +%Y%m%d-%H%M%S)" >> $GITHUB_ENV
-
-      - name: Build and Push Docker Image
+      - name: Build and tag Docker image
         run: |
-          IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/${{ matrix.action }}:${{ env.IMAGE_TAG }}
-          LATEST_IMAGE_NAME=ghcr.io/${{ github.repository_owner }}/${{ matrix.action }}:latest
+          cd ${{ matrix.action }}
+          docker build -t ghcr.io/${{ github.repository }}/${{ matrix.action }}:latest \
+                       -t ghcr.io/${{ github.repository }}/${{ matrix.action }}:${{ github.sha }} .
 
-          docker build -t $IMAGE_NAME -t $LATEST_IMAGE_NAME ${{ matrix.action }} --build-arg JAR_PATH=../sfdxlean.jar
-          docker push $IMAGE_NAME
-          docker push $LATEST_IMAGE_NAME
+      - name: Push Docker images
+        run: |
+          docker push ghcr.io/${{ github.repository }}/${{ matrix.action }}:latest
+          docker push ghcr.io/${{ github.repository }}/${{ matrix.action }}:${{ github.sha }}
